refactor: removed refuel URL - its a cost POST, added vehicle to URL before {carId} to differenciate between driveId and carId
